# artemis_python

./: .gitignore  README.md  help.py  help.txt
PyAddons/formations/: scatter.py  vec.py
missions/: learn.py
missions/cruiser_tournament/: bonusfleets.py  periods.py  script.py  stations.py  targeting.py  tonnage.py  whales.py
missions/cruiser_tournament/need_conversion/: Cruiser_Tournament_DIfficulty.xml
missions/cruiser_tournament/processed/: Cruiser_Tournament_Kraliens.xml  anomalies.py
missions/database/: READEME.md  script.py
missions/example_scatter/: README.md  script.py
missions/pipex/: README.md  index.html  messaging.py  script.py
missions/the_arena/: README.md
missions/the_arena/xml-aml/: MISS_TheArena_SOURCE.xml
modules/sbs_tools/: Cargo.toml
modules/sbs_tools/src/: lib.rs
modules/sbs_tools/src/sbs_math/: vec3.rs
modules/sbs_tools/src/scatter/: mod.rs
modules/sbs_tools/src/www/: mod.rs
tools/missons-cli/: Cargo.toml  test.bat
tools/missons-cli/src/: main.rs
