[package]
name = "missions-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tempdir="0.3.7"
zip="0.5"

# serde_json = "1.0"
# serde = "1.0"
# either = { version = "1.6.1", features = ["serde"] }
